<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2009 Brian Pellin.
     
 This file is part of KeePassDroid.

  KeePassDroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  KeePassDroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
	<RelativeLayout android:id="@+id/header"
	  android:layout_alignParentTop="true"
	  style="@style/HeaderBar">
	    <Button android:id="@+id/back_button"
	      style="@style/Button.Back"		  
	      android:text="@string/back" />
	    <TextView android:id="@+id/title"
		  style="@style/Header.Title" />
	</RelativeLayout>
	<LinearLayout android:id="@+id/footer" 
	  style="@style/Footer">
		<Button android:id="@+id/entry_save"
		  style="@style/Button"
		  android:text="@string/entry_save"/>
	</LinearLayout>

	<ScrollView android:id="@+id/entry_scroll"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:layout_below="@id/header"
	  android:layout_above="@id/footer">
		<RelativeLayout android:layout_width="fill_parent"
		  android:layout_height="wrap_content">
			<!--  Title -->	
			<TextView android:id="@+id/entry_title_label"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  style="@style/FormLabel"
			  android:text="@string/entry_title" />
			<ImageButton android:id="@+id/icon_button"
			  style="@style/Button.Icon"
			  android:layout_alignParentRight="true"
			  android:layout_below="@id/entry_title_label"
			  android:src="@drawable/ic00"/>
			<EditText android:id="@+id/entry_title" 
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_toLeftOf="@+id/icon_button"
			  android:singleLine="true"
			  android:layout_below="@id/entry_title_label"
			  android:hint="@string/hint_title"/>
			<!-- Username -->
			<TextView android:id="@+id/entry_user_name_label"
			  style="@style/FormLabel"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:layout_below="@id/icon_button"
			  android:text="@string/entry_user_name" />
			<EditText android:id="@+id/entry_user_name" 
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:singleLine="true"
			  android:layout_below="@id/entry_user_name_label"
			  android:hint="@string/hint_username"/>
			<!--  URL -->
			<TextView android:id="@+id/entry_url_label"
			  style="@style/FormLabel"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:layout_below="@id/entry_user_name" 
			  android:text="@string/entry_url" />
			<EditText android:id="@+id/entry_url" 
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:singleLine="true"
			  android:layout_below="@id/entry_url_label"
			  android:hint="@string/hint_url"/>
			<!-- Password -->
			<TextView android:id="@+id/entry_password_label"
			  style="@style/FormLabel"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content" 
			  android:layout_below="@id/entry_url" 
			  android:text="@string/entry_password" />
			<Button android:id="@+id/generate_button"
			  style="@style/Button.Icon"
			  android:layout_below="@id/entry_password_label"
			  android:layout_alignParentRight="true"
			  android:text="@string/ellipsis" />
			<EditText android:id="@+id/entry_password" 
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:password="true"
			  android:singleLine="true"
			  android:layout_toLeftOf="@id/generate_button"
			  android:hint="@string/hint_pass"
			  android:layout_alignTop="@id/generate_button"/>
			<!-- Confirm Password -->
			<TextView android:id="@+id/entry_confpassword_label"
			  style="@style/FormLabel"
			  android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:layout_below="@id/entry_password" android:text="@string/entry_confpassword" />
			<EditText android:id="@+id/entry_confpassword" 
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:password="true"
			  android:singleLine="true"
			  android:layout_below="@id/entry_confpassword_label"
			  android:hint="@string/hint_conf_pass"/>
			<!-- Comment -->
			<TextView android:id="@+id/entry_comment_label"
			  style="@style/FormLabel"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content" 
			  android:layout_below="@id/entry_confpassword" 
			  android:text="@string/entry_comment" />
			<EditText android:id="@+id/entry_comment" 
		      android:inputType="textMultiLine"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
			  android:layout_below="@id/entry_comment_label"
			  android:hint="@string/hint_comment"/>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>