<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2010 Tolga Onbay, Brian Pellin.
     
 This file is part of KeePassDroid.

  KeePassDroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  KeePassDroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<RelativeLayout android:id="@+id/header"
	  style="@style/HeaderBar">

		<Button android:id="@+id/cancel_button"
		  style="@style/Button.Back"
		  android:text="@string/cancel" />
		<TextView android:id="@+id/title"
		  style="@style/Header.Title"
		  android:text="@string/generate_password" />
		<Button android:id="@+id/accept_button"
		  style="@style/Button"
		  android:layout_centerVertical="true"
		  android:layout_alignParentRight="true"
		  android:text="@string/accept" />  
	</RelativeLayout>
	<ScrollView android:id="@+id/ScrollView"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:layout_below="@id/header">
		<RelativeLayout
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:paddingLeft="10dp"
		  android:paddingRight="5dp">
			<TextView android:id="@+id/length_label"
			  style="@style/FormLabel"
			  android:layout_height="wrap_content"
			  android:layout_width="fill_parent"
			  android:text="@string/length"/>
			<Button android:id="@+id/btn_length16"
			  style="@style/Button.Inline"
			  android:text="16"
			  android:layout_width="60dp"
			  android:layout_alignParentRight="true"
			  android:layout_below="@id/length_label" />
			<Button android:id="@+id/btn_length12"
			  style="@style/Button.Inline"
			  android:text="12"
			  android:layout_width="60dp"
			  android:layout_toLeftOf="@id/btn_length16"
			  android:layout_alignTop="@id/btn_length16" />
			<Button android:id="@+id/btn_length8"
			  style="@style/Button.Inline"
			  android:text="8"
			  android:layout_width="60dp"
			  android:layout_toLeftOf="@id/btn_length12" 
			  android:layout_alignTop="@id/btn_length16" />
			<Button android:id="@+id/btn_length6" 
			  style="@style/Button.Inline"
			  android:text="6" 
			  android:layout_width="60dp"
			  android:layout_toLeftOf="@id/btn_length8" 
			  android:layout_alignTop="@id/btn_length16" />
			<EditText android:id="@+id/length" 
			  android:layout_width="fill_parent" 
			  android:layout_toLeftOf="@id/btn_length6" 
			  android:layout_height="wrap_content" 
			  android:layout_alignTop="@id/btn_length16"
			  android:hint="@string/hint_length"
			  android:inputType="number"
			  android:text="16"/>
			
			<TableLayout android:id="@+id/password_options" 
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_below="@id/length">
				<TableRow android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal">
					<CheckBox android:id="@+id/cb_uppercase" 
					  android:layout_weight="0.5" 
					  android:layout_width="0dp" 
					  android:layout_height="wrap_content"
					  android:checked="true" 
					  android:text="@string/uppercase" />
					<CheckBox android:id="@+id/cb_lowercase" 
					  android:layout_weight="0.5" 
					  android:layout_width="0dp" 
					  android:layout_height="wrap_content"
					  android:checked="true"
					  android:text="@string/lowercase"/>
				</TableRow>
				<TableRow android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal">
					<CheckBox android:id="@+id/cb_digits" 
					  android:layout_weight="0.5" 
					  android:layout_width="0dp" 
					  android:layout_height="wrap_content"
					  android:checked="true"
					  android:text="@string/digits" />
					<CheckBox android:id="@+id/cb_minus" 
					  android:layout_weight="0.5" 
					  android:layout_width="0dp" 
					  android:layout_height="wrap_content"
					  android:checked="true"
					  android:text="@string/minus" />
				</TableRow>
				<TableRow android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal">
					<CheckBox android:id="@+id/cb_underline" 
					  android:layout_weight="0.5" 
					  android:layout_width="0dp" 
					  android:layout_height="wrap_content"
					  android:checked="true"
					  android:text="@string/underline" />
					<CheckBox android:id="@+id/cb_specials" 
					  android:layout_weight="0.5" 
					  android:layout_width="0dp" 
					  android:layout_height="wrap_content"
					  android:checked="true"
					  android:text="@string/special" />
				</TableRow>
				<TableRow android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal">
					<CheckBox android:id="@+id/cb_brackets" 
					  android:layout_weight="0.5" 
					  android:layout_width="0dp" 
					  android:layout_height="wrap_content"
					  android:text="@string/brackets" />
					<CheckBox android:id="@+id/cb_space" 
					  android:layout_weight="0.5" 
					  android:layout_width="0dp" 
					  android:layout_height="wrap_content"
					  android:text="@string/space" />
				</TableRow>
			</TableLayout>
			
			<Button android:id="@+id/generate_password_button"
			  android:layout_below="@id/password_options"
			  android:layout_alignParentRight="true"
			  android:layout_marginTop="20dp"
			  style="@style/Button.Inline"
			  android:text="@string/generate_password" />

			<EditText
			  android:id="@+id/password"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_alignTop="@id/generate_password_button"
			  android:layout_toLeftOf="@id/generate_password_button"
			  android:hint="@string/hint_generated_password"
			  android:textAppearance="@style/VisiblePassword"
			  android:inputType="textVisiblePassword"
			  android:singleLine="true" />
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>