<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright 2009-2011 Brian Pellin.
     
 This file is part of KeePassDroid.

  KeePassDroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  KeePassDroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
  android:id="@+id/entry_table"
  android:layout_height="wrap_content"
  android:layout_width="fill_parent"
  android:orientation="vertical">	
	<!-- Username -->
	<TextView android:id="@+id/entry_user_name_label"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:text="@string/entry_user_name"
	  style="@style/EntryPropertyName"
	/>
	<com.keepassdroid.view.TextViewSelect android:id="@+id/entry_user_name" 
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/entry_user_name_label"
	  android:layout_toLeftOf="@+id/copy_user_name_button"
	  style="@style/EntryPropertyValue"
	/>
	<Button
	  android:id="@id/copy_user_name_button"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_alignParentRight="true"
	  android:layout_below="@id/entry_user_name_label"
	  android:layout_alignTop="@id/entry_user_name"
	  style="@style/Button.Copy" />
	
	<!--  URL -->
	<TextView android:id="@+id/entry_url_label"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/copy_user_name_button"
	  android:text="@string/entry_url" 
	  style="@style/EntryPropertyName" />
	<com.keepassdroid.view.TextViewSelect android:id="@+id/entry_url" 
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/entry_url_label"
	  android:layout_toLeftOf="@+id/copy_url_button"
	  android:autoLink="all"
	  style="@style/EntryPropertyValue"
	/>
	<Button
	  android:id="@id/copy_url_button"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_alignParentRight="true"
	  android:layout_alignTop="@id/entry_url"
	  android:layout_below="@id/entry_url_label"
	  style="@style/Button.Copy" />

	<!-- Password -->
	<TextView android:id="@+id/entry_password_label"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/copy_url_button" 
	  android:text="@string/entry_password"
	  style="@style/EntryPropertyName"
	/>
	<com.keepassdroid.view.TextViewSelect
	  android:id="@+id/entry_password"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/entry_password_label"
	  android:layout_toLeftOf="@+id/copy_password_button"
	  style="@style/EntryPropertyValue"
	  android:textAppearance="@style/VisiblePassword"
	  android:password="true" />
	<Button
	  android:id="@id/copy_password_button"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_alignParentRight="true"
	  android:layout_alignTop="@id/entry_password"
	  android:layout_below="@id/entry_password_label"
	  style="@style/Button.Copy" />

	<!-- Comment -->
	<TextView android:id="@id/entry_comment_label"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content" 
	  android:layout_below="@id/copy_password_button"
	  android:text="@string/entry_comment"
	  style="@style/EntryPropertyName"
	/>
	<com.keepassdroid.view.TextViewSelect android:id="@+id/entry_comment" 
      android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/entry_comment_label"
	  style="@style/EntryPropertyValue"
	/>
	<LinearLayout android:id="@+id/extra_strings"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/entry_comment"
	  android:orientation="vertical">
	</LinearLayout>
	<!-- Created -->
	<TextView android:id="@+id/entry_created_label"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content" 
	  android:layout_below="@id/extra_strings"
	  android:text="@string/entry_created"
	  style="@style/EntryPropertyName"
	/>
	<TextView android:id="@+id/entry_created" 
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/entry_created_label"
	  style="@style/EntryPropertyValue"
	/>
	<!-- Modified -->
	<TextView android:id="@+id/entry_modified_label"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content" 
	  android:layout_below="@id/entry_created"
	  android:text="@string/entry_modified"
	  style="@style/EntryPropertyName"
	/>
	<TextView android:id="@+id/entry_modified" 
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/entry_modified_label"
	  style="@style/EntryPropertyValue"
	/>
	<!-- Accessed -->
	<TextView android:id="@+id/entry_accessed_label"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content" 
	  android:layout_below="@id/entry_modified"
	  android:text="@string/entry_accessed"
	  style="@style/EntryPropertyName"
	/>
	<TextView android:id="@+id/entry_accessed" 
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/entry_accessed_label"
	  style="@style/EntryPropertyValue"
	/>
	<!-- Expires -->
	<TextView android:id="@+id/entry_expires_label"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content" 
	  android:layout_below="@id/entry_accessed"
	  android:text="@string/entry_expires"
	  style="@style/EntryPropertyName"
	/>
	<TextView android:id="@+id/entry_expires" 
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/entry_expires_label"
	  style="@style/EntryPropertyValue"
	/>
</RelativeLayout>